--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tsc": "tsc src/* --outDir dist"
   },
   "repository": "git+https://github.com/EdmondWang/typescript-playground.git",
   "keywords": [],
