--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,15 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "Debug via ts-node",
+            "program": "${workspaceFolder}/src/index.js",
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
+        },
+        {
+            "type": "node",
+            "request": "launch",
             "name": "Launch Program",
             "skipFiles": [
                 "<node_internals>/**"
